[gd_scene load_steps=5 format=3 uid="uid://cheaktg512gbs"]

[ext_resource type="Script" path="res://equipment/gauss_canon.gd" id="1_atkd2"]
[ext_resource type="PackedScene" uid="uid://bxu6ayuo5874i" path="res://equipment/projectiles/gauss_round.tscn" id="2_6iek8"]
[ext_resource type="AudioStream" uid="uid://chijjjcwbj2os" path="res://assets/audio/gauss_canon.mp3" id="3_xq3fj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_68s54"]
size = Vector2(1920, 1080)

[node name="gauss_canon" type="Node2D"]
script = ExtResource("1_atkd2")
gauss_round_scene = ExtResource("2_6iek8")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="Detection_Area" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_68s54")
debug_color = Color(0, 0.6, 0.701961, 0)

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="AudioFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_xq3fj")
volume_db = -20.0

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_entered" from="Area2D" to="Area2D" method="_on_area_entered" flags=18]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="area_exited" from="Area2D" to="Area2D" method="_on_area_exited" flags=18]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
